# flight-practice

./: Cargo.toml  README.md
src/: client.rs  main.rs
src/data_processor/: mod.rs  processor.rs
src/server/: flight_server.rs  mod.rs
src/types/: mod.rs  processing_result.rs
src/validator/: data_validator.rs  mod.rs
